--- a/example/main_example/index.html
+++ b/example/main_example/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="./../../modal-main.css">
+    <link rel="stylesheet" href="./../../modal-main-updated.css">
 
     <title>ModalMain Example</title>
 </head>
@@ -15,7 +15,7 @@
 
     <button class="create">Create</button>
 </body>
-<script src="./../../modal-main.js"></script>
+<script src="./../../modal-main-updated.js"></script>
 
 <script>
     let button = document.querySelector(".create")
